JVM options -server and concurrent mark & sweep gc